syntax = "proto3";

package autokitteh.projects.v1;

message Project {
  string project_id = 1;
  string name = 2;

  string owner_id = 3; // relevant only for ee.
}
